Fixed header bug on small screens

--- a/AussieBuilt/staticfiles/AussieBuilt/home.css
+++ b/AussieBuilt/staticfiles/AussieBuilt/home.css
@@ -111,9 +111,7 @@
 }
 
 
-#a {
-    width: --navLink-0;
-}
+
 
 /*
 @media (max-width: 600px) {
