--- a/AussieBuilt/staticfiles/AussieBuilt/template.css
+++ b/AussieBuilt/staticfiles/AussieBuilt/template.css
@@ -453,8 +453,7 @@ a {
 
     #nav-header {
         font-size: 18px;
-        width: 220px;
-        display: inline-block;
+        width: 221px;
     }
 
     #nav-logo {
